--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,6 +16,8 @@
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_slideshow" />
-        <item android:title="@string/menu_logout" />
+        <item
+            android:id="@+id/nav_logout"
+            android:title="@string/menu_logout" />
     </group>
 </menu>
