--- a/app/src/main/res/layout/activity_side_nav.xml
+++ b/app/src/main/res/layout/activity_side_nav.xml
@@ -22,4 +22,16 @@
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/activity_main_drawer" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_nav_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:background="?android:attr/windowBackground"
+        android:fitsSystemWindows="true"
+        android:gravity="bottom"
+        app:menu="@menu/bottom_nav_menu" />
+
 </androidx.drawerlayout.widget.DrawerLayout>
