--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -5,12 +5,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.search.SearchFragment" >
+    tools:context=".ui.post.AddPostFragment" >
 
     <LinearLayout
         android:id="@+id/create_post_layout"
-        android:layout_width="409dp"
-        android:layout_height="729dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,7 +22,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0"
-            android:hint="@string/post_title" />
+            android:hint="@string/post_title"
+            android:maxLines="1" />
 
         <LinearLayout
             android:layout_width="match_parent"
