--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -8,7 +8,7 @@
 
     <fragment
         android:id="@+id/add_post"
-        android:name="com.teamred.checkmate.ui.post.AddPostFragment"
+        android:name="com.teamred.checkmate.ui.post.CreatePostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:label="@string/content_description_add_post"
