--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.post.AddPostFragment" >
+    tools:context=".ui.post.CreatePostFragment" >
 
     <LinearLayout
         android:id="@+id/create_post_layout"
@@ -31,13 +31,23 @@
             android:layout_weight="0"
             android:orientation="horizontal">
 
+            <EditText
+                android:id="@+id/tag_editor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:ems="10"
+                android:hint="enter tags, use semicolon"
+                android:inputType="textPersonName" />
+
             <TextView
                 android:id="@+id/postTag"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="0"
                 android:gravity="center"
-                android:text="Tags" />
+                android:text="Tags"
+                android:visibility="invisible" />
 
             <ImageButton
                 android:id="@+id/imageButton2"
@@ -46,6 +56,7 @@
                 android:layout_height="match_parent"
                 android:backgroundTint="#00FFFFFF"
                 android:src="@drawable/ic_baseline_add_24"
+                android:visibility="invisible"
                 tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
         </LinearLayout>
