--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="purple_200">#FFBB86FC</color> //blue_a100
+    <color name="purple_500">#FF6200EE</color> //blue_a700
+    <color name="purple_700">#FF3700B3</color> //005db3 or blue_900
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="blue_50">#E1F5FE</color>
+    <color name="blue_100">#B3E5FC</color>
+    <color name="blue_200">#81D4FA</color>
+    <color name="blue_300">#4FC3F7</color>
+    <color name="blue_400">#29B6F6</color>
+    <color name="blue_500">#03A9F4</color>
+    <color name="blue_600">#039BE5</color>
+    <color name="blue_700">#0288D1</color>
+    <color name="blue_800">#0277BD</color>
+    <color name="blue_900">#01579B</color>
+    <color name="blue_a100">#80D8FF</color>
+    <color name="blue_a200">#40C4FF</color>
+    <color name="blue_a400">#00B0FF</color>
+    <color name="blue_a700">#0091EA</color>
+    <color name="blue_a900">#005db3</color>
 </resources>
