--- a/app/src/main/res/layout/group_listview_row.xml
+++ b/app/src/main/res/layout/group_listview_row.xml
@@ -7,13 +7,20 @@
     android:paddingLeft="5dp"
     android:paddingRight="5dp">
 
-    <TextView
-        android:id="@+id/listview_group_name"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Title"
-        android:textColor="@color/black"
-        android:textSize="24sp" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/listview_group_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Title"
+            android:textColor="@color/black"
+            android:textSize="24sp" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/tagLayout"
@@ -27,25 +34,11 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/note_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Date" />
-
-        <TextView
             android:id="@+id/listview_group_creator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Author"
+            android:text="Creator"
             android:textColor="@color/browser_actions_title_color" />
-
-        <TextView
-            android:id="@+id/note_number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/design_default_color_error"
-            android:textSize="20sp"
-            android:textStyle="bold|italic" />
 
     </LinearLayout>
 
@@ -54,7 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="3"
-        android:text="Content"
+        android:text="Description"
         android:textColor="#514F4F" />
 
 </LinearLayout>
