--- a/app/src/main/res/layout/fragment_search_group.xml
+++ b/app/src/main/res/layout/fragment_search_group.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
-            android:layout_weight="0"
+            android:layout_weight="1"
             android:orientation="horizontal">
 
             <ImageView
@@ -29,13 +29,15 @@
                 android:layout_gravity="center"
                 android:contentDescription="@string/algolia_logo"
                 android:foregroundGravity="center"
+                android:focusable="false"
                 app:srcCompat="@drawable/algolia_blue_mark" />
 
             <Spinner
                 android:id="@+id/search_type"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:entries="@array/search_type" />
+                android:entries="@array/search_type"
+                android:focusable="false"/>
 
             <SearchView
                 android:id="@+id/search_keywords"
@@ -46,7 +48,8 @@
                 android:layout_marginEnd="5dp"
                 android:layout_marginBottom="5dp"
                 android:background="#FFFFFF"
-                android:elevation="10dp">
+                android:elevation="10dp"
+                android:focusable="false">
 
             </SearchView>
         </LinearLayout>
@@ -55,7 +58,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="66dp"
-            android:layout_weight="0"
+            android:layout_weight="1"
             android:orientation="horizontal">
 
             <Spinner
@@ -63,17 +66,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:entries="@array/sort_order" />
+                android:entries="@array/sort_order"
+                android:minHeight="48dp"
+                android:focusable="false"/>
 
             <Button
                 android:id="@+id/btn_filter"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:background="@android:drawable/spinner_background"
                 android:text="Filter"
                 android:textSize="20sp"
                 app:icon="@drawable/filter_full"
-                app:iconSize="32dp" />
+                app:iconSize="32dp"
+                android:focusable="false"/>
 
         </LinearLayout>
 
@@ -81,7 +88,7 @@
             android:id="@+id/search_result_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="5" />
+            android:layout_weight="9" />
 
     </LinearLayout>
 
