--- a/app/src/main/res/layout/note_listview_row.xml
+++ b/app/src/main/res/layout/note_listview_row.xml
@@ -3,6 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="15dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginRight="15dp"
     android:orientation="vertical"
     android:paddingLeft="5dp"
     android:paddingRight="5dp">
@@ -11,6 +14,7 @@
         android:id="@+id/listview_group_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="Title"
         android:textColor="@color/black"
         android:textSize="24sp" />
@@ -30,22 +34,8 @@
             android:id="@+id/note_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Date" />
-
-        <TextView
-            android:id="@+id/listview_group_creator"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Author"
-            android:textColor="@color/browser_actions_title_color" />
-
-        <TextView
-            android:id="@+id/note_number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/design_default_color_error"
-            android:textSize="20sp"
-            android:textStyle="bold|italic" />
+            android:text="Date"
+            android:visibility="invisible" />
 
     </LinearLayout>
 
@@ -56,5 +46,14 @@
         android:maxLines="3"
         android:text="Content"
         android:textColor="#514F4F" />
+
+    <TextView
+        android:id="@+id/listview_group_creator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:text="Author"
+        android:textColor="@color/browser_actions_title_color" />
 
 </LinearLayout>
