group detail page works

--- a/app/src/main/res/layout/group_listview_row.xml
+++ b/app/src/main/res/layout/group_listview_row.xml
@@ -5,13 +5,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingLeft="5dp"
-    android:paddingRight="5dp">
+    android:paddingRight="5dp"
+    android:descendantFocusability="blocksDescendants">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:focusable="false">
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:clickable="false">
 
         <TextView
             android:id="@+id/listview_group_name"
@@ -19,6 +22,8 @@
             android:layout_height="wrap_content"
             android:text="Title"
             android:textColor="@color/black"
+            android:focusableInTouchMode="false"
+            android:clickable="false"
             android:focusable="false"
             android:textSize="24sp" />
 
@@ -29,13 +34,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:focusable="false">
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:clickable="false">
 
         <TextView
             android:id="@+id/tag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="tag"
+            android:focusableInTouchMode="false"
+            android:clickable="false"
             android:focusable="false"/>
     </LinearLayout>
 
@@ -43,13 +52,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:focusable="false">
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:clickable="false">
 
         <TextView
             android:id="@+id/listview_group_creator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Creator"
+            android:focusableInTouchMode="false"
+            android:clickable="false"
             android:focusable="false"
             android:textColor="@color/browser_actions_title_color" />
 
@@ -61,6 +74,8 @@
         android:layout_height="wrap_content"
         android:maxLines="3"
         android:text="Description"
+        android:focusableInTouchMode="false"
+        android:clickable="false"
         android:focusable="false"
         android:textColor="#514F4F" />
 
