--- a/app/src/main/res/layout/fragment_search_group.xml
+++ b/app/src/main/res/layout/fragment_search_group.xml
@@ -29,15 +29,13 @@
                 android:layout_gravity="center"
                 android:contentDescription="@string/algolia_logo"
                 android:foregroundGravity="center"
-                android:focusable="false"
                 app:srcCompat="@drawable/algolia_blue_mark" />
 
             <Spinner
                 android:id="@+id/search_type"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:entries="@array/search_type"
-                android:focusable="false"/>
+                android:entries="@array/search_type"/>
 
             <SearchView
                 android:id="@+id/search_keywords"
@@ -48,8 +46,7 @@
                 android:layout_marginEnd="5dp"
                 android:layout_marginBottom="5dp"
                 android:background="#FFFFFF"
-                android:elevation="10dp"
-                android:focusable="false">
+                android:elevation="10dp">
 
             </SearchView>
         </LinearLayout>
@@ -67,8 +64,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:entries="@array/sort_order"
-                android:minHeight="48dp"
-                android:focusable="false"/>
+                android:minHeight="48dp"/>
 
             <Button
                 android:id="@+id/btn_filter"
@@ -79,8 +75,7 @@
                 android:text="Filter"
                 android:textSize="20sp"
                 app:icon="@drawable/filter_full"
-                app:iconSize="32dp"
-                android:focusable="false"/>
+                app:iconSize="32dp"/>
 
         </LinearLayout>
 
