--- a/app/src/main/res/layout/fragment_group_detail.xml
+++ b/app/src/main/res/layout/fragment_group_detail.xml
@@ -26,7 +26,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="20dp"
-            android:background="#F2F3F7">
+            android:background="@color/background">
 
         </SearchView>
 
@@ -121,7 +121,7 @@
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#F2F3F7">
+            android:background="@color/background">
 
 
         </ListView>
