--- a/app/src/main/res/layout/fragment_search_group.xml
+++ b/app/src/main/res/layout/fragment_search_group.xml
@@ -17,25 +17,18 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="10dp"
             android:layout_marginBottom="5dp"
             android:layout_weight="1"
             android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/algolia_logo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:contentDescription="@string/algolia_logo"
-                android:foregroundGravity="center"
-                app:srcCompat="@drawable/algolia_blue_mark" />
 
             <Spinner
                 android:id="@+id/search_type"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:entries="@array/search_type"/>
+                android:entries="@array/search_type" />
 
             <SearchView
                 android:id="@+id/search_keywords"
@@ -45,7 +38,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_marginBottom="5dp"
-                android:background="#FFFFFF"
+                android:background="@color/background"
                 android:elevation="10dp">
 
             </SearchView>
@@ -55,6 +48,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="66dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:orientation="horizontal">
 
@@ -64,7 +59,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:entries="@array/sort_order"
-                android:minHeight="48dp"/>
+                android:minHeight="48dp" />
 
             <Button
                 android:id="@+id/btn_filter"
@@ -75,7 +70,7 @@
                 android:text="Filter"
                 android:textSize="20sp"
                 app:icon="@drawable/filter_full"
-                app:iconSize="32dp"/>
+                app:iconSize="32dp" />
 
         </LinearLayout>
 
@@ -83,7 +78,12 @@
             android:id="@+id/search_result_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="9" />
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="5dp"
+            android:layout_weight="9"
+            android:background="@color/background" />
 
     </LinearLayout>
 
