Revert "made a new java fragment and replaced the dashboard xml for profile"
This reverts commit d1e73a7517a9666542ddda93e8aa2feeda1e5332.

--- a/app/src/main/res/navigation/bottom_navigation.xml
+++ b/app/src/main/res/navigation/bottom_navigation.xml
@@ -12,9 +12,9 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/navigation_profile"
+        android:id="@+id/navigation_dashboard"
         android:name="com.teamred.checkmate.ui.dashboard.DashboardFragment"
-        android:label="@string/title_profile"
+        android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
 <!--    <fragment-->
