--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,9 +8,9 @@
         android:title="@string/title_home"/>
 
     <item
-        android:id="@+id/navigation_profile"
+        android:id="@+id/navigation_dashboard"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_profile" />
+        android:title="@string/title_dashboard"/>
 
     <item
         android:id="@+id/navigation_notification"
