--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="2dp"
-        android:background="#ffe95451"/>
+        android:background="#0288D1"/>
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/pager"
