--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -3,6 +3,6 @@
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:elevation="2dp"
-    android:background="#ffe95451"
+    android:background="#039BE5"
     android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
     xmlns:android="http://schemas.android.com/apk/res/android" />
