--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Checkmate" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Checkmate" parent="Theme.AppCompat.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/blue_a700</item>
         <item name="colorPrimaryVariant">@color/blue_900</item>
