--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -10,14 +10,8 @@
     <item
         android:id="@+id/navigation_dashboard"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard"/>
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-=======
->>>>>>> parent of d1e73a7 (made a new java fragment and replaced the dashboard xml for profile)
-
-    <item
+        android:title="@string/title_profile"/>
+<item
         android:id="@+id/navigation_notification"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_notifications"/>
