--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -36,10 +36,22 @@
         android:id="@+id/calendarheatmap"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="23dp"
+        android:layout_marginBottom="208dp"
         android:text="CALENDAR HEATMAP"
         app:layout_constraintBottom_toBottomOf="@+id/text_home"
         app:layout_constraintEnd_toEndOf="@+id/text_home"
         app:layout_constraintStart_toStartOf="@+id/text_home" />
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerView"
+        android:name="com.teamred.checkmate.ui.notifications.NotificationsFragment"
+        android:layout_width="332dp"
+        android:layout_height="438dp"
+        android:layout_marginBottom="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calendarheatmap" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
