--- a/app/src/main/res/layout/fragment_group_detail.xml
+++ b/app/src/main/res/layout/fragment_group_detail.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:backgroundTintMode="screen">
 
     <LinearLayout
@@ -23,7 +24,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:layout_marginTop="10dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="20dp"
             android:background="@color/background">
@@ -38,39 +38,38 @@
             android:background="#FFFEFE"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/group_detail_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Title"
-                    android:textColor="@color/black"
-                    android:textSize="24sp" />
-
-            </LinearLayout>
-
             <TextView
-                android:id="@+id/group_detail_desc"
+                android:id="@+id/group_detail_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:maxLines="3"
-                android:text="desc" />
+                android:text="Title"
+                android:textColor="@color/black"
+                android:textSize="24sp" />
 
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
+            <!--            <TextView-->
+<!--                android:id="@+id/group_detail_desc"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:maxLines="3"-->
+<!--                android:text="desc" />-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/textView8"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="TextView" />-->
 
             <TextView
                 android:id="@+id/group_detail_creator"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="creator" />
+
+            <TextView
+                android:id="@+id/group_detail_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="lorem ipsum description" />
 
             <View
                 android:layout_width="fill_parent"
@@ -91,11 +90,11 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/numberOfThread"
+                android:id="@+id/numPosts"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="5 Available Threads" />
+                android:text="5 members" />
 
             <Spinner
                 android:id="@+id/note_list_ranking"
@@ -119,11 +118,10 @@
         </LinearLayout>
 
         <ListView
+            android:id="@+id/note_list_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/background">
-
-
         </ListView>
 
     </LinearLayout>
