--- a/app/src/main/res/navigation/bottom_navigation.xml
+++ b/app/src/main/res/navigation/bottom_navigation.xml
@@ -12,27 +12,22 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_profile"
         android:name="com.teamred.checkmate.ui.profile.ProfileFragment"
         android:label="@string/title_profile"
         tools:layout="@layout/fragment_profile" />
-
-<!--    <fragment-->
-<!--        android:id="@+id/navigation_notification"-->
-<!--        android:name="com.teamred.checkmate.ui.notifications.NotificationsFragment"-->
-<!--        android:label="@string/title_notifications"-->
-<!--        tools:layout="@layout/fragment_notifications" />-->
-    <fragment
-        android:id="@+id/navigation_chat"
-        android:name="com.teamred.checkmate.ui.chat.ChatFragment"
-        android:label="@string/title_chat"
-        tools:layout="@layout/fragment_chat" />
 
     <fragment
         android:id="@+id/navigation_search"
         android:name="com.teamred.checkmate.ui.search.SearchGroupFragment"
         android:label="@string/title_search"
         tools:layout="@layout/fragment_search_group" />
+
+    <!--    <fragment-->
+<!--        android:id="@+id/navigation_chat"-->
+<!--        android:name="com.teamred.checkmate.ui.chat.ChatFragment"-->
+<!--        android:label="@string/title_chat"-->
+<!--        tools:layout="@layout/fragment_chat" />-->
 
 
 </navigation>
