--- a/app/src/main/res/layout/post_listview_row.xml
+++ b/app/src/main/res/layout/post_listview_row.xml
@@ -2,71 +2,83 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginBottom="5dp"
-    android:background="@android:color/white"
-    android:descendantFocusability="blocksDescendants"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="15dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginRight="15dp"
     android:orientation="vertical"
     android:paddingLeft="5dp"
-    android:paddingRight="5dp">
+    android:paddingTop="5dp"
+    android:paddingRight="5dp"
+    android:paddingBottom="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="false"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/listview_group_name"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:clickable="false"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:text="Group Title"
+            android:layout_weight="0"
+            android:text="Title"
             android:textColor="@color/black"
             android:textSize="24sp" />
 
+        <TextView
+            android:id="@+id/like_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right|center_vertical"
+            android:text="0"
+            android:visibility="invisible" />
+
+        <ImageView
+            android:id="@+id/likeImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="15dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0"
+            android:visibility="invisible"
+            app:srcCompat="@drawable/ic_baseline_thumb_up_24" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/tagLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="false"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tag"
+            android:id="@+id/tags_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:clickable="false"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:text="group tags" />
+            android:layout_weight="1"
+            android:text="tags, go, here" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="false"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/listview_group_creator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:clickable="false"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:text="group creator"
+            android:layout_marginEnd="14dp"
+            android:text="Author"
             android:textColor="@color/browser_actions_title_color" />
+
+        <TextView
+            android:id="@+id/post_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Date"
+            android:visibility="visible" />
 
     </LinearLayout>
 
@@ -74,11 +86,8 @@
         android:id="@+id/post_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="false"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
         android:maxLines="3"
-        android:text="group description"
+        android:text="Content"
         android:textColor="#514F4F" />
 
 </LinearLayout>
