add creator id to group

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -20,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:visibility="invisible"
             ads:srcCompat="@drawable/outline_add_photo_alternate_24" />
 
         <EditText
